# gulf-health-lakehouse

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: __init__.py
analysis/ab_test/: __init__.py  ab_test.py  results.md  stats.py
batch/spark/: README.md  __init__.py  rolling_health_score.py
dashboards/: README.md
data/raw/sample/: body_scan.csv  body_scan.parquet  daily_activity.csv  daily_activity.parquet  dim_device.csv  dim_device.parquet  dim_user.csv  dim_user.parquet  experiment_assignment.csv  experiment_assignment.parquet  intraday_hr.csv  (+5 more)
data_generator/: __init__.py  body_composition.py  config.yaml  devices.py  experiment.py  generate.py  nutrition.py  users.py  utils.py  wearables.py
docs/: architecture.md  kafka_topology.md
docs/adr/: 0000-template.md  0001-synthetic-data-foundation.md  0002-docker.md  0003-ab-testing.md  0004-dbt.md  0005-airflow.md  0006-bigquery.md  0007-kafka.md  0008-pyspark.md
ingestion/: __init__.py  load_to_postgres.py
orchestration/airflow/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.airflow.yml  requirements-airflow.txt
streaming/: README.md  __init__.py  consumer.py  create_topic.py  docker-compose.kafka.yml  producer.py
tests/: conftest.py  test_ab_test.py  test_generator.py  test_ingestion.py  test_spark_health_score.py
transform/dbt/: README.md  dbt_project.yml  profiles.yml
warehouse/: README.md  __init__.py  load_to_bigquery.py
(+25 files in other folders)
